--- a/Dataway.Admin/Dataway.Admin/Views/Login/Login.cshtml
+++ b/Dataway.Admin/Dataway.Admin/Views/Login/Login.cshtml
@@ -39,6 +39,8 @@
                         <div class="button-container">
                             <input type="submit" value="login" />
                         </div>
+
+                        <a href="/forgot-password">Forgot password</a>
                     </form>
                     @if (Model.IncorrectUsernameAndPassword)
                     {
